[package]
name = "slowread"
version = "0.1.0"
authors = ["Bernardo Belchior <bernardo.belchior1@gmail.com>"]

[dependencies]
ansi_term = "0.11"
futures = "0.1"
http = "0.1"
log = "0.4.1"
native-tls = "0.1"
openssl = "0.10"
rand = "0.4"
structopt = "0.2"
tokio = "0.1"
tokio-openssl = "0.2"
tokio-timer = "0.1"
tokio-tls = "0.1"
trust-dns-resolver = "^0.8"
